[package]
name = "maglev"
version = "0.1.0"
license = "MIT OR Apache-2.0"
authors = ["Without Boats <woboats@gmail.com>"]
edition = "2018"

[dependencies]
parking_lot = "0.10.2"
event-listener = "2.1.0"
futures-core = "0.3.5"
uring-sys = "0.7.4"
async-task = "3.0.0"
async-executor = "0.2.1"
waker-fn = "1.1.0"
parking = "2.0.0"

[dependencies.ringbahn]
git = "https://github.com/withoutboats/ringbahn"
branch = "iou-0.3"

[dependencies.iou]
git = "https://github.com/withoutboats/iou"
branch = "iou-0.3"

[dev-dependencies]
futures = "0.3.0"
