[package]
name = "maglev"
version = "0.1.0"
license = "MIT OR Apache-2.0"
authors = ["Without Boats <woboats@gmail.com>"]
edition = "2018"

[dependencies]
event-listener = "2.1.0"
futures-core = "0.3.5"
uring-sys = "0.7.4"
waker-fn = "1.1.0"
parking = "2.0.0"
iou = "0.3.0"

[dependencies.ringbahn]
git = "https://github.com/ringbahn/ringbahn"
branch = "master"

[dev-dependencies]
futures = "0.3.0"
